fix legend spacing

--- a/css/posts/nba-players/app.css
+++ b/css/posts/nba-players/app.css
@@ -1,3 +1,9 @@
+* {
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
 .top-player-table {
 	width: 100%;
 }
